# GlobalOpt

./: CMakeLists.txt  compile.py
Benchmarks/: CMakeLists.txt  objective.f90  objective_parameters.f90
Benchmarks/ACSTEM/: ACSTEM2.f90  CMakeLists.txt  Objective_acstem.f90  Test.f90  a.out  acstem.f90  acstem_parameters.f90  filter.f90  ljgh.f90  merge_rank.f90  modhess.f90  modhess.mod  morsegh.f90  objective_acstem.mod
Benchmarks/ACSTEM/psedo_images/: CMakeLists.txt  M55.txt  M55.xyz  main.f90
Benchmarks/ACSTEM/psedo_images/todelete/: M55.txt  M55.xyz.txt  a.out
Benchmarks/ACSTEM/tmp/: acstem_parameters.f90
Benchmarks/ACSTEM/to_delete/: ACSTEM_Objective.f90  objective_function.f90
Benchmarks/Objective/: CMakeLists.txt  Gupta.f  lj.f90  modhess.f90  modhess.mod  morse.f90  morse.mod  objective.f90
Benchmarks/Potentials/: Gupta.f  copy_CMakeLists.txt  lj.f90  morse.f90
CNA/: AlFcc.CN  Au55_chiral_min.r  CNcna.c  CNio.c  CNlist.c  CNpairStat.c  CNpairStat.h  RunCNA.scr  cnA.exc  cnbond.py  runCNA.py
CNA/todelete/CNAsrc/: AlBcc.r  AlFcc.r  AlHcp.atm  Au55chiralmin.r  CNmacros.h  CNmain.c  CNmain.h  CNpbc.h  Makefile  NoFccAtoms.CN  README_CN2000  RunCNA.scr  a.out  cnA.exc  mymain.f90
CNA/todelete/CNAsrc/results/: Au55_CNA_SGS.xlsx  Au55_chiral_min.CN  Au55_chiral_min.xyz  Au55chiral.r  a.out  (+4 more)
CNA/todelete/cna/: .cproject  .project  acstem.f90  acstem_parameters.f90  cna.f90  main.f90  noise_models.f90txt  test_images.f90  visualize.py
SRC/: a.out  main.cpp
SRC/GA/: mrgrnk.f90  unirnk.f90
lib/: Makefile  acstem2.mod  cmake_install.cmake  comparator.mod  lj.mod  morse.mod  mylbfgsb.mod  objective_acstem.mod
src/: .cproject  .project  how_compile_in_gardar  how_to_compile_with_cmake
src/GA/: CMakeLists.txt  commons.f90  comparator.f90  ga_cluster.f90  ga_main.f90  ga_params.f90  ga_population.f90  ga_select.f90  main.f90  mylbfgsb.f90  objective.f90  qmodule.f90
src/LBFGSB/: CMakeLists.txt
src/LBFGSB/exmples/: mylbfgsb.f90
src/to_delete/: Au55.xyz  Au55_2.xyz  CMakeLists.txt  fort.16  lowest  mc.Ftxt  txtcommons.f90txt  txtga_bln.f90txt
src/to_delete/Debug/: GAWale  commons.mod  comparator.mod  ga_params.mod  ga_population.mod  makefile  modhess.mod  mylbfgsb.mod  objective.mod  qmodule.mod  sources.mk  subdir.mk
src/to_delete/Debug/LBFGSB/: subdir.mk
test/: GARUN  Xmin_1.txt
(+15 files in other folders)
